added MVC5 into the Unity container mix.

--- a/Unity-All/packages.config
+++ b/Unity-All/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
+  <package id="Unity.Mvc5" version="1.2.3" targetFramework="net452" />
   <package id="Unity.WebAPI" version="5.2.3" targetFramework="net452" />
   <package id="Unity.WebForms" version="1.4.0.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0.6" targetFramework="net452" />
